@@ -1,3 +1,5 @@
+2023-10-30 Franz Holzinger <franz@ttproducts.de>
+    * new method getGatewayProxyObjectForExtension
 
 2023-10-25 Franz Holzinger <franz@ttproducts.de>
     * remove unused method Start::getListenerExtKey
